--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DIY Blog</title>
+  
+  <!-- 아이콘 사용을 위한 라이브러리 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- common.css : 공통 디자인 -->
+  <link rel="stylesheet" href="./css/common.css">
+  
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/side.css">
+  <link rel="stylesheet" href="./css/content.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
   <header>
