--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- 아이콘 사용을 위한 라이브러리 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- class.css : 클래스 모음집 -->
+  <link rel="stylesheet" href="./css/class.css">
   <!-- common.css : 공통 디자인 -->
   <link rel="stylesheet" href="./css/common.css">
   
@@ -28,8 +30,8 @@
         <i class="fa-solid fa-magnifying-glass"></i>
       </div>
       <div>
-        <div>
-          <img src="#" alt="profile">
+        <div class="overflow-hidden width-50 height-50">
+          <img src="./resource/char.jpg" alt="profile">
         </div>
       </div>
     </div>
